性能监控页

--- a/xn.html
+++ b/xn.html
@@ -355,7 +355,7 @@ desired effect
                                     <h3 class="box-title">当前进程列表</h3>
                                 </div>
                                 <!-- /.box-header -->
-                                <div class="box-body no-padding">
+                                <div class="box-body no-padding layer-mb20">
                                     <table class="table table-condensed">
                                         <tr>
                                             <th style="">进程名称</th>
@@ -402,6 +402,69 @@ desired effect
                 
                                     </table>
                                 </div>
+                                <div class="text-center"><a href="" class="text-ffffff">&lt;加载更多&gt;</a></div>
+                                <!-- /.box-body -->
+                            </div>
+                            <!-- /.box -->
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-xs-12">
+                        <div class="row-base-style is-table-data">
+                            <div class="left-icon"></div>
+                            <div class="right-icon"></div>
+                            <div class="item ">
+                                <div class="box-header">
+                                    <h3 class="box-title">当前进程列表</h3>
+                                </div>
+                                <!-- /.box-header -->
+                                <div class="box-body no-padding layer-mb20">
+                                    <table class="table table-condensed">
+                                        <tr>
+                                            <th style="">进程名称</th>
+                                            <th>物理内存</th>
+                                            <th>共享内存</th>
+                                            <th style="">内存使用率</th>
+                                            <th style="">CPU使用率</th>
+                                        </tr>
+                                        <tr>
+                                            <td>main－server.exe</td>
+                                            <td>393.58mb</td>
+                                            <td>0.00mb</td>
+                                            <td>0.20%</td>
+                                            <td>0.20%</td>
+                                        </tr>
+                                        <tr>
+                                            <td>main－server.exe</td>
+                                            <td>393.58mb</td>
+                                            <td>0.00mb</td>
+                                            <td>0.20%</td>
+                                            <td>0.20%</td>
+                                        </tr>
+                                        <tr>
+                                            <td>main－server.exe</td>
+                                            <td>393.58mb</td>
+                                            <td>0.00mb</td>
+                                            <td>0.20%</td>
+                                            <td>0.20%</td>
+                                        </tr>
+                                        <tr>
+                                            <td>main－server.exe</td>
+                                            <td>393.58mb</td>
+                                            <td>0.00mb</td>
+                                            <td>0.20%</td>
+                                            <td>0.20%</td>
+                                        </tr>
+                                        <tr>
+                                            <td>main－server.exe</td>
+                                            <td>393.58mb</td>
+                                            <td>0.00mb</td>
+                                            <td>0.20%</td>
+                                            <td>0.20%</td>
+                                        </tr>
+                
+                                    </table>
+                                </div>
+                                <div class="text-center"><a class="text-ffffff">&nbsp;</a></div>
                                 <!-- /.box-body -->
                             </div>
                             <!-- /.box -->
